--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">DoorDash</string>
+    <string name="ok">OK</string>
+    <string name="network_error">Please check your network connectivity.</string>
 </resources>
